# pg_log_trunc

./: Makefile  meson.build  pg_log_trunc.c
